--- a/README.ipynb
+++ b/README.ipynb
@@ -1,31 +1,51 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
-    "#  Offers data manipulation, i will be using it for manipulating numerical tabels.\r\n",
+    "# Decision Tree Classifier\r\n",
+    "## By: Ryan Kellmer"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Libraries\r\n",
+    "- Pandas is used to manipulate numerical tabels\r\n",
+    "- Matplotlib is used to display the data in figures and graphs\r\n",
+    "- Scikit-learn is used to split data into training sets, produce tree figures, and impliment the Decision Tree Classifier\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
     "import pandas as pd \r\n",
-    "\r\n",
-    "# Used for displaying data in figures and  graphs.\r\n",
     "import matplotlib.pyplot as plt \r\n",
-    "\r\n",
-    "# tree structure that breaks down into smaller subsets resulting in a prediction. Traverse to find prediction\r\n",
     "from sklearn.tree import DecisionTreeClassifier \r\n",
-    "\r\n",
-    "#  adds onto matplotlib, allows for production of tree figures.\r\n",
     "from sklearn.tree import plot_tree  \r\n",
-    "\r\n",
-    "# Used to split data into our training and testing  data.\r\n",
     "from sklearn.model_selection import train_test_split "
    ],
    "outputs": [],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Data Tabel\r\n",
+    "Initialize a data frame which hold the data from zoo.csv."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "df = pd.read_csv('zoo.csv')\r\n",
+    "df"
+   ],
    "outputs": [],
    "metadata": {}
   }
